2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-10	Joel Sherrill <joel@OARcorp.com>

	* gdb/gdb.add, gdb/mkspec.in, gdb/target-gdb.add: Use RPM logic to
	determine which targets have simulators, configure with appropriate
	arguments, and package the correct files.

2003-02-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* gcc3newlib/target-gcc.add: Remove %{_exeext} from gccbug.
	* gcc3newlib/gccnewlib.add: Add %gcj to support to disabling building
	gcj from rpmbuild command line.
	Copy gsyslimits.h for CDN-X compilation.

2003-01-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* README.cdn-X: New.
	* binutils/binutils.add: Add --build=%_build --host=%_host.
	* cpukit/.cvsignore: Add *.spec.in.
	* gcc3newlib/gccnewlib.add: Add --build=%_build --host=%_host.
	* gdb/gdb.add: Add --build=%_build --host=%_host.
	* rtemsdoc/.cvsignore: Add *.spec.in.

2003-01-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* gcc3newlib/gccnewlib.add: Remove Buildroot.
	* common/.cvsignore: New.

2003-01-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* common/common.add.in: Add Vendor, Distribution, BuildRoot.
	* binutils/Makefile.am: Fix path to clean.add.
	* binutils/binutils.add: Remove BuildRoot.
	* cpukit/Makefile.am:  Use $(top_builddir)/common/common.add,
	$(top_builddir)/common/clean.add, header.add.
	Generate rtems-cpukit.spec.in.
	* cpukit/header.add: New.
	* cpukit/rtems-cpukit.spec.in: Remove.
	* cpukit/rtems-cpukit.add: New.
	* gccnewlib/gccnewlib.add: Remove Buildroot.
	* gdb/gdb.add: Remove Buildroot.
	* rtemsdoc/rtemsdoc.add: Remove BuildRoot.

2003-01-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtemsdoc/Makefile.am: Use $(top_builddir)/common/common.add,
	$(top_builddir)/common/clean.add, header.add.
	Generate rtemsdoc.spec.in.
	* rtemsdoc/mkspec.in: Remove exe_ext.
	* rtemsdoc/rtemsdoc.spec.in: Remove.