@@ -12,13 +12,13 @@ gcc_version=2.95.3
 gcc_patch_version=20020328
 gccnewlib_rpm_release=3
 gdb_version=5.2
-gdb_patch_version=20020612
-gdb_rpm_release=1
+gdb_patch_version=20030211
+gdb_rpm_release=2
 rtems_version=ss-20000726
 rtems_rpm_release=1
 rpm_build_root=%{_tmppath}
 gcc3newlib_version=1.11.0
-gcc3newlib_patch_version=20030120
+gcc3newlib_patch_version=20030203
 gcc3_version=3.2.1
 gcc3_patch_version=20021209
-gcc3newlib_rpm_release=1
+gcc3newlib_rpm_release=2
